--- a/view/PlanNavigatorWidget.ui
+++ b/view/PlanNavigatorWidget.ui
@@ -93,7 +93,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
@@ -1040,6 +1040,54 @@ font: 75 14pt &quot;Helvetica&quot;;</string>
         </property>
         <property name="text">
          <string>print</string>
+        </property>
+       </widget>
+       <widget class="QComboBox" name="plan_zone_cbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>290</y>
+          <width>361</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="attribute_twidget">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>320</y>
+          <width>361</width>
+          <height>131</height>
+         </rect>
+        </property>
+        <column>
+         <property name="text">
+          <string>Attribute Name</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Type</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Description</string>
+         </property>
+        </column>
+       </widget>
+       <widget class="QPushButton" name="load_template_button">
+        <property name="geometry">
+         <rect>
+          <x>240</x>
+          <y>460</y>
+          <width>131</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Load Template</string>
         </property>
        </widget>
       </widget>
