--- a/view/CamaNavigatorWidget.ui
+++ b/view/CamaNavigatorWidget.ui
@@ -119,11 +119,11 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>Valuation level</string>
+        <string>Бүсчлэлийн анализ</string>
        </attribute>
        <widget class="QLabel" name="label_30">
         <property name="geometry">
@@ -199,12 +199,12 @@
          <rect>
           <x>9</x>
           <y>40</y>
-          <width>75</width>
+          <width>172</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
-         <string>load</string>
+         <string>Тооцоолох үнийн интервал</string>
         </property>
        </widget>
        <widget class="QRadioButton" name="market_price_rbutton">
@@ -265,7 +265,7 @@
           <x>10</x>
           <y>150</y>
           <width>453</width>
-          <height>192</height>
+          <height>251</height>
          </rect>
         </property>
         <column>
@@ -289,12 +289,31 @@
          <rect>
           <x>200</x>
           <y>120</y>
-          <width>81</width>
+          <width>171</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
-         <string>View Layer</string>
+         <string>Тооцооллын давхарга харах</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="layer_button">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>410</y>
+          <width>141</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Давхарга</string>
         </property>
        </widget>
       </widget>
@@ -1347,25 +1366,6 @@
            <string>Тооцоолох</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="layer_button">
-          <property name="geometry">
-           <rect>
-            <x>4</x>
-            <y>398</y>
-            <width>141</width>
-            <height>23</height>
-           </rect>
-          </property>
-          <property name="font">
-           <font>
-            <weight>50</weight>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>Давхарга</string>
-          </property>
-         </widget>
         </widget>
         <widget class="QWidget" name="tab_4">
          <attribute name="title">
@@ -1722,6 +1722,340 @@
           <string>З/З-н үнийн мэдээ</string>
          </property>
         </widget>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="tab_9">
+       <attribute name="title">
+        <string>Ө/Н-н анализ</string>
+       </attribute>
+       <widget class="QCheckBox" name="is_elevation_chbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>190</y>
+          <width>131</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Elevation</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="is_slope_chbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>210</y>
+          <width>151</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Slope</string>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="cadastre_current_twidget">
+        <property name="geometry">
+         <rect>
+          <x>6</x>
+          <y>230</y>
+          <width>464</width>
+          <height>361</height>
+         </rect>
+        </property>
+        <property name="sortingEnabled">
+         <bool>true</bool>
+        </property>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>160</number>
+        </attribute>
+        <attribute name="horizontalHeaderMinimumSectionSize">
+         <number>35</number>
+        </attribute>
+        <attribute name="verticalHeaderDefaultSectionSize">
+         <number>30</number>
+        </attribute>
+        <attribute name="verticalHeaderMinimumSectionSize">
+         <number>19</number>
+        </attribute>
+        <column>
+         <property name="text">
+          <string>Cadastre Parcel Information</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Elevation</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Slope</string>
+         </property>
+        </column>
+       </widget>
+       <widget class="QGroupBox" name="groupBox_9">
+        <property name="geometry">
+         <rect>
+          <x>1</x>
+          <y>0</y>
+          <width>470</width>
+          <height>187</height>
+         </rect>
+        </property>
+        <property name="title">
+         <string>Criteria</string>
+        </property>
+        <widget class="QLabel" name="parcel_results_label">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>155</y>
+           <width>131</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <family>Lucida Grande</family>
+           <pointsize>14</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Results:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="parcel_khashaa_edit">
+         <property name="geometry">
+          <rect>
+           <x>290</x>
+           <y>125</y>
+           <width>170</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="land_use_type_cbox">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>80</y>
+           <width>451</width>
+           <height>22</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_34">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>60</y>
+           <width>170</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Land Use Type</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="parcel_num_edit">
+         <property name="geometry">
+          <rect>
+           <x>290</x>
+           <y>33</y>
+           <width>170</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="parcel_streetname_edit">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>125</y>
+           <width>271</width>
+           <height>20</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="bag_cbox">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>33</y>
+           <width>271</width>
+           <height>22</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_83">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>105</y>
+           <width>170</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Street Name</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_35">
+         <property name="geometry">
+          <rect>
+           <x>11</x>
+           <y>13</y>
+           <width>170</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Bag</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_84">
+         <property name="geometry">
+          <rect>
+           <x>290</x>
+           <y>105</y>
+           <width>161</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Khashaa Number</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_33">
+         <property name="geometry">
+          <rect>
+           <x>290</x>
+           <y>13</y>
+           <width>170</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Parcel Number</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="parcel_find_button">
+         <property name="geometry">
+          <rect>
+           <x>386</x>
+           <y>153</y>
+           <width>75</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Find</string>
+         </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="parcel_clear_button">
+         <property name="geometry">
+          <rect>
+           <x>300</x>
+           <y>153</y>
+           <width>75</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Clear</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="is_no_calculate_chbox">
+         <property name="geometry">
+          <rect>
+           <x>150</x>
+           <y>156</y>
+           <width>141</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Is No Calculate</string>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QPushButton" name="slope_calculate_button">
+        <property name="geometry">
+         <rect>
+          <x>301</x>
+          <y>200</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Calculate</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="error_label">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>600</y>
+          <width>374</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <family>Helvetica</family>
+          <pointsize>14</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QLabel {color : red;}
+font: 75 14pt &quot;Helvetica&quot;;</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="slope_apply_button">
+        <property name="geometry">
+         <rect>
+          <x>388</x>
+          <y>200</y>
+          <width>75</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Apply</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="tab_10">
+       <attribute name="title">
+        <string>Орон Зайн анализ</string>
+       </attribute>
+       <widget class="QTableWidget" name="pasture_values_twidget">
+        <property name="geometry">
+         <rect>
+          <x>3</x>
+          <y>90</y>
+          <width>468</width>
+          <height>371</height>
+         </rect>
+        </property>
        </widget>
       </widget>
      </widget>
