--- a/view/PlanAttributeEditDialog.ui
+++ b/view/PlanAttributeEditDialog.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="ok_button">
+  <widget class="QPushButton" name="apply_button">
    <property name="geometry">
     <rect>
      <x>296</x>
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Ok</string>
+    <string>Apply</string>
    </property>
   </widget>
   <widget class="QPushButton" name="help_button">
