--- a/view/ParcelInfoDialog.ui
+++ b/view/ParcelInfoDialog.ui
@@ -114,7 +114,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="parcel_person_tab">
        <attribute name="title">
@@ -1204,6 +1204,74 @@
           <height>20</height>
          </rect>
         </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="new_doc_tab">
+       <attribute name="title">
+        <string>New Document</string>
+       </attribute>
+       <widget class="QComboBox" name="decision_num_cbox">
+        <property name="geometry">
+         <rect>
+          <x>9</x>
+          <y>11</y>
+          <width>251</width>
+          <height>22</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="load_new_docs_button">
+        <property name="geometry">
+         <rect>
+          <x>270</x>
+          <y>10</y>
+          <width>101</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Load Documents</string>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="new_doc_twidget">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>40</y>
+          <width>531</width>
+          <height>301</height>
+         </rect>
+        </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::DoubleClicked</set>
+        </property>
+        <attribute name="horizontalHeaderCascadingSectionResizes">
+         <bool>false</bool>
+        </attribute>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>120</number>
+        </attribute>
+        <attribute name="horizontalHeaderHighlightSections">
+         <bool>false</bool>
+        </attribute>
+        <attribute name="verticalHeaderCascadingSectionResizes">
+         <bool>false</bool>
+        </attribute>
+        <column>
+         <property name="text">
+          <string>Name</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Description</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>View</string>
+         </property>
+        </column>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_5">
