--- a/view/ApplicationsPastureDialog.ui
+++ b/view/ApplicationsPastureDialog.ui
@@ -63,7 +63,7 @@
     <string notr="true">QTabBar::tab { width: 150px; }</string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="usesScrollButtons">
     <bool>true</bool>
@@ -92,7 +92,7 @@
        <rect>
         <x>10</x>
         <y>40</y>
-        <width>241</width>
+        <width>171</width>
         <height>22</height>
        </rect>
       </property>
@@ -382,6 +382,35 @@
        <string>Approved Land Use Type</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_33">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>201</x>
+        <y>23</y>
+        <width>141</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Rigth Type</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="rigth_type_cbox">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>40</y>
+        <width>146</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QGroupBox" name="application_status_group_box">
      <property name="geometry">
@@ -506,7 +535,7 @@
         <string>Status</string>
        </property>
        <property name="textAlignment">
-        <set>AlignLeading|AlignVCenter</set>
+        <set>AlignLeft|AlignVCenter</set>
        </property>
       </column>
       <column>
@@ -514,7 +543,7 @@
         <string>Date</string>
        </property>
        <property name="textAlignment">
-        <set>AlignLeading|AlignVCenter</set>
+        <set>AlignLeft|AlignVCenter</set>
        </property>
       </column>
       <column>
@@ -522,7 +551,7 @@
         <string>Officer in Charge</string>
        </property>
        <property name="textAlignment">
-        <set>AlignLeading|AlignVCenter</set>
+        <set>AlignLeft|AlignVCenter</set>
        </property>
       </column>
       <column>
@@ -530,7 +559,7 @@
         <string>Next Officer in Charge</string>
        </property>
        <property name="textAlignment">
-        <set>AlignLeading|AlignVCenter</set>
+        <set>AlignLeft|AlignVCenter</set>
        </property>
       </column>
      </widget>
@@ -595,7 +624,7 @@
        </rect>
       </property>
       <property name="title">
-       <string>Person Group</string>
+       <string>PUG Group</string>
       </property>
       <widget class="QLineEdit" name="leader_id_edit">
        <property name="enabled">
@@ -615,7 +644,7 @@
         <rect>
          <x>40</x>
          <y>99</y>
-         <width>121</width>
+         <width>211</width>
          <height>16</height>
         </rect>
        </property>
@@ -659,7 +688,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Is Find Group</string>
+        <string>Is Find</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_32">
@@ -667,7 +696,7 @@
         <rect>
          <x>40</x>
          <y>60</y>
-         <width>121</width>
+         <width>211</width>
          <height>16</height>
         </rect>
        </property>
@@ -832,7 +861,7 @@
      <widget class="QComboBox" name="applicant_documents_cbox">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>260</x>
         <y>19</y>
         <width>261</width>
         <height>22</height>
@@ -842,8 +871,8 @@
      <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>20</y>
+        <x>10</x>
+        <y>22</y>
         <width>251</width>
         <height>16</height>
        </rect>
@@ -855,7 +884,7 @@
      <widget class="QPushButton" name="load_doc_button">
       <property name="geometry">
        <rect>
-        <x>440</x>
+        <x>560</x>
         <y>19</y>
         <width>141</width>
         <height>23</height>
@@ -1060,7 +1089,7 @@
    </widget>
    <widget class="QWidget" name="parcel_tab">
     <attribute name="title">
-     <string>Parcel</string>
+     <string>Pasture Parcel</string>
     </attribute>
     <widget class="QGroupBox" name="search_group_box">
      <property name="geometry">
@@ -1333,6 +1362,197 @@
        </rect>
       </property>
      </widget>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="person_group_parcel_tab">
+    <attribute name="title">
+     <string>Person Group Parcel</string>
+    </attribute>
+    <widget class="QPushButton" name="group_parcel_add_button">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>220</y>
+       <width>81</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Connect</string>
+     </property>
+    </widget>
+    <widget class="QGroupBox" name="assigned_group_box_5">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>251</y>
+       <width>771</width>
+       <height>151</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Assigned Parcel</string>
+     </property>
+     <widget class="QTableWidget" name="assigned_group_parcel_twidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>751</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <column>
+       <property name="text">
+        <string>Parcel ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Neighbourhood</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Area(ga)</string>
+       </property>
+      </column>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="assigned_group_box_6">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>65</y>
+       <width>771</width>
+       <height>151</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Result Parcel</string>
+     </property>
+     <widget class="QTableWidget" name="result_group_parcel_twidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>751</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <column>
+       <property name="text">
+        <string>Parcel ID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Land Use Type</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Area(ga)</string>
+       </property>
+      </column>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="search_group_box_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>0</y>
+       <width>771</width>
+       <height>64</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Search</string>
+     </property>
+     <widget class="QLineEdit" name="search_group_parcel_num_edit">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>31</y>
+        <width>191</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="find_group_parcel_number_button">
+      <property name="geometry">
+       <rect>
+        <x>441</x>
+        <y>30</y>
+        <width>101</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Find</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_18">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>16</y>
+        <width>241</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Enter Parcel Number</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="bag_group_parcel_cbox">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>31</y>
+        <width>191</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_19">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>15</y>
+        <width>181</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bag</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QPushButton" name="group_parcel_remove_button">
+     <property name="geometry">
+      <rect>
+       <x>380</x>
+       <y>220</y>
+       <width>81</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Cancel</string>
+     </property>
     </widget>
    </widget>
    <widget class="QWidget" name="tab_print">
