--- a/view/MemberGroupDialog.ui
+++ b/view/MemberGroupDialog.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>698</width>
-    <height>465</height>
+    <width>750</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>698</width>
-    <height>465</height>
+    <width>750</width>
+    <height>550</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>698</width>
-    <height>465</height>
+    <width>750</width>
+    <height>550</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,7 @@
     <rect>
      <x>0</x>
      <y>20</y>
-     <width>693</width>
+     <width>751</width>
      <height>16</height>
     </rect>
    </property>
@@ -42,12 +42,12 @@
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="title_label">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>201</width>
+     <width>341</width>
      <height>16</height>
     </rect>
    </property>
@@ -60,8 +60,8 @@
     <rect>
      <x>10</x>
      <y>30</y>
-     <width>331</width>
-     <height>391</height>
+     <width>351</width>
+     <height>481</height>
     </rect>
    </property>
    <property name="title">
@@ -71,19 +71,19 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
-      <width>311</width>
+      <y>180</y>
+      <width>331</width>
       <height>174</height>
      </rect>
     </property>
     <column>
      <property name="text">
-      <string>PUG ID</string>
+      <string>ID</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>PUG Name</string>
+      <string>Name</string>
      </property>
     </column>
     <column>
@@ -91,14 +91,19 @@
       <string>Is Contract (№)</string>
      </property>
     </column>
+    <column>
+     <property name="text">
+      <string>Type</string>
+     </property>
+    </column>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>14</y>
-      <width>113</width>
-      <height>13</height>
+      <y>18</y>
+      <width>191</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -110,7 +115,7 @@
      <rect>
       <x>10</x>
       <y>34</y>
-      <width>113</width>
+      <width>191</width>
       <height>20</height>
      </rect>
     </property>
@@ -121,22 +126,22 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>14</y>
-      <width>113</width>
-      <height>13</height>
+      <x>10</x>
+      <y>104</y>
+      <width>191</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Pasture use group</string>
+     <string>Name</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="group_name_edit">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>34</y>
-      <width>191</width>
+      <x>10</x>
+      <y>120</y>
+      <width>331</width>
       <height>20</height>
      </rect>
     </property>
@@ -144,8 +149,8 @@
    <widget class="QPushButton" name="group_add_button">
     <property name="geometry">
      <rect>
-      <x>78</x>
-      <y>60</y>
+      <x>140</x>
+      <y>149</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -157,8 +162,8 @@
    <widget class="QPushButton" name="group_edit_button">
     <property name="geometry">
      <rect>
-      <x>138</x>
-      <y>60</y>
+      <x>200</x>
+      <y>149</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -170,8 +175,8 @@
    <widget class="QPushButton" name="group_delete_button">
     <property name="geometry">
      <rect>
-      <x>198</x>
-      <y>60</y>
+      <x>260</x>
+      <y>149</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -184,8 +189,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
-      <width>113</width>
+      <y>380</y>
+      <width>131</width>
       <height>22</height>
      </rect>
     </property>
@@ -193,8 +198,8 @@
    <widget class="QPushButton" name="bag_add_button">
     <property name="geometry">
      <rect>
-      <x>147</x>
-      <y>281</y>
+      <x>160</x>
+      <y>371</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -223,7 +228,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>270</y>
+      <y>360</y>
       <width>111</width>
       <height>16</height>
      </rect>
@@ -235,8 +240,8 @@
    <widget class="QPushButton" name="bag_remove_button">
     <property name="geometry">
      <rect>
-      <x>147</x>
-      <y>319</y>
+      <x>160</x>
+      <y>409</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -253,8 +258,8 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>270</y>
-      <width>121</width>
+      <y>360</y>
+      <width>141</width>
       <height>114</height>
      </rect>
     </property>
@@ -267,8 +272,8 @@
    <widget class="QPushButton" name="group_new_button">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>60</y>
+      <x>71</x>
+      <y>149</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -277,14 +282,37 @@
      <string>new</string>
     </property>
    </widget>
+   <widget class="QComboBox" name="group_type_cbox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>76</y>
+      <width>331</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>59</y>
+      <width>191</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Type</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>349</x>
+     <x>370</x>
      <y>30</y>
-     <width>341</width>
-     <height>391</height>
+     <width>371</width>
+     <height>481</height>
     </rect>
    </property>
    <property name="title">
@@ -339,7 +367,7 @@
    <widget class="QPushButton" name="person_find_button">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>290</x>
       <y>33</y>
       <width>75</width>
       <height>23</height>
@@ -354,7 +382,7 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>321</width>
+      <width>351</width>
       <height>114</height>
      </rect>
     </property>
@@ -373,8 +401,8 @@
      <rect>
       <x>10</x>
       <y>210</y>
-      <width>321</width>
-      <height>174</height>
+      <width>351</width>
+      <height>261</height>
      </rect>
     </property>
     <attribute name="horizontalHeaderDefaultSectionSize">
@@ -432,8 +460,8 @@
   <widget class="QPushButton" name="close_button">
    <property name="geometry">
     <rect>
-     <x>610</x>
-     <y>430</y>
+     <x>660</x>
+     <y>520</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -445,8 +473,8 @@
   <widget class="QPushButton" name="apply_button">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>430</y>
+     <x>570</x>
+     <y>520</y>
      <width>75</width>
      <height>23</height>
     </rect>
