--- a/view/CamaNavigatorWidget.ui
+++ b/view/CamaNavigatorWidget.ui
@@ -119,7 +119,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -268,6 +268,11 @@
           <height>251</height>
          </rect>
         </property>
+        <column>
+         <property name="text">
+          <string>Is Check</string>
+         </property>
+        </column>
         <column>
          <property name="text">
           <string>zone no</string>
