--- a/view/PastureSettings.ui
+++ b/view/PastureSettings.ui
@@ -314,6 +314,9 @@
         <height>341</height>
        </rect>
       </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
       <column>
        <property name="text">
         <string>Check</string>
